# mdgm

./: .Rbuildignore  .gitignore  404.html  CLAUDE.html  CLAUDE.md  CMakeLists.txt  DESCRIPTION  Graph.h  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  README.Rmd  README.md  TODO.html  TODO.md  _pkgdown.yml  authors.html  authors.md  functions.r  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: cpp11.R  mcmc.R  mcmc_result.R  mdgm-package.R  model.R  natural_undirected_graph.R  rng.R  sample_mrf.R  undirected_graph.R
articles/: emission-models.html  emission-models.md  graph-construction.html  graph-construction.md  index.html  index.md  mdgm-models.html  mdgm-models.md  mdgm.html  mdgm.md
man/: MdgmModel.Rd  MdgmResult.Rd  NaturalUndirectedGraph.Rd  SrfModel.Rd  SrfResult.Rd  ess.Rd  mcmc.Rd  mdgm.Rd  mdgm_model.Rd  mrf.Rd  nug_from_adj_list.Rd  nug_from_adj_mat.Rd  nug_from_edge_list.Rd  nug_from_grid.Rd  sample_mrf.Rd  split_rhat.Rd  srf_model.Rd  ug_from_adj_list.Rd  ug_from_adj_mat.Rd  ug_from_edge_list.Rd
reference/: MdgmModel.html  MdgmModel.md  MdgmResult.html  MdgmResult.md  NaturalUndirectedGraph.html  NaturalUndirectedGraph.md  SrfModel.html  SrfModel.md  SrfResult.html  SrfResult.md  ess.html  ess.md  index.html  index.md  mcmc.html  mcmc.md  mdgm-package.html  mdgm.html  mdgm.md  mdgm_model.html  mdgm_model.md  mrf.html  mrf.md  nug_from_adj_list.html  nug_from_adj_list.md  nug_from_adj_mat.html  nug_from_adj_mat.md  nug_from_edge_list.html  nug_from_edge_list.md  nug_from_grid.html  nug_from_grid.md  sample_mrf.html  sample_mrf.md  split_rhat.html  split_rhat.md  srf_model.html  srf_model.md
src/: Makevars  RNG.h  R_model.cpp  R_natural_undirected_graph.cpp  R_undirected_graph.cpp  R_utils.cpp  cpp11.cpp  directed_acyclic_graph.cpp  emission.cpp  graph_storage.cpp  graph_storage.h  markov_random_field.cpp  mcmc.cpp  mixture_directed_graphical_models.cpp  model.cpp  natural_undirected_graph.cpp  random.h  spatial_random_field.cpp  undirected_graph.cpp  undirected_graph.h
tests/: testthat.R
vignettes/: emission-models.Rmd  graph-construction.Rmd  mdgm-models.Rmd  mdgm.Rmd  natural_undirected_graph.Rmd
(+25 files in other folders)
